src/snapshots/cclv__test_harness__help_overlay_visible.snap
---
source: src/test_harness.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└───────────┌ Keyboard Shortcuts ──────────────────────────────────┐───────────┘
┌Main Agent │Navigation                                            │───────────┐
│           │  j/↓         Scroll down                             │           │
││  2 Hello │  k/↑         Scroll up                               │           │
│           │  h/←         Scroll left (for long lines)            │           │
││  3 Hi the│  l/→         Scroll right                            │           │
│           │  Ctrl+d/Page Down Page down                          │           │
││  4 Can yo│  Ctrl+u/Page Up   Page up                            │           │
│           │  g/Home      Go to top                               │           │
││  5 Of cou│  G/End       Go to bottom                            │           │
│           │                                                      │           │
││  6 Thanks│Pane Focus                                            │           │
│           │  Tab         Cycle focus between panes               │           │
│           │  1           Focus main agent pane                   │           │
│           │  2           Focus subagent pane                     │           │
│           │  3           Focus stats panel                       │           │
│           │                                                      │           │
│           │Tabs (Subagent Pane)                                  │           │
│           └─────────────── Press Esc or ? to close ──────────────┘           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
