src/snapshots/cclv__test_harness__test_harness_after_tab.snap
---
source: src/test_harness.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (6 entries)────────────────────────────────────────────────────────┐
│                                                                              │
││  2 Hello                                                                    │
│                                                                              │
││  3 Hi there!                                                                │
│                                                                              │
││  4 Can you help?                                                            │
│                                                                              │
││  5 Of course, I'd be happy to help.                                         │
│                                                                              │
││  6 Thanks                                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | [ ]: Tabs | 1-9: Select | ?: Help
